--- a/index.html
+++ b/index.html
@@ -142,10 +142,26 @@
         </div>
 
         <div class="promo_slider">
-            <img src="img/jpg/main_ph_1.jpg" alt="Slide 1">
-            <img src="img/jpg/main_ph_2.jpg" alt="Slide 2">
-            <img src="img/jpg/main_ph_3.jpg" alt="Slide 3">
-          </div>
+            <div class="promo_slider_item">
+                <img src="img/slider/main_ph_1-transformed.png" alt="Slide 1">
+                <img src="img/slider/main_ph_2-transformed.png" alt="Slide 2">
+                <img src="img/slider/main_ph_3-transformed.png" alt="Slide 3">
+                <img src="img/slider/main_ph_4-transformed.png" alt="Slide 4">
+                <img src="img/slider/main_ph_5-transformed.png" alt="Slide 5">
+                <img src="img/slider/main_ph_6-transformed.png" alt="Slide 6">
+                <img src="img/slider/main_ph_7-transformed.png" alt="Slide 7">
+            </div>
+            <div class="promo_slider_lines">
+                <img id="lines" src="img/slider/lines/1.png" alt="Line 1">
+                <img id="lines" src="img/slider/lines/2.png" alt="Line 2">
+                <img id="lines" src="img/slider/lines/3.png" alt="Line 3">
+                <img id="lines" src="img/slider/lines/4.png" alt="Line 4">
+                <img id="lines" src="img/slider/lines/5.png" alt="Line 5">
+                <img id="lines" src="img/slider/lines/6.png" alt="Line 6">
+                <img id="lines" src="img/slider/lines/7.png" alt="Line 7">
+                <img id="lines" src="img/slider/lines/8.png" alt="Line 8">
+            </div>
+        </div>
 
         <!-- <div class="promo_item">
             <div class="promo_item-content">
