--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Portfolio</title>
     <meta name="title" content="Мое портфолио">
@@ -77,14 +77,6 @@
 
     <div class="menu">
         <div class="menu_block">
-            <div class="menu_close">
-                <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M11.8323 10.0233L19.6199 2.23534C20.1267 1.72877 20.1267 0.909703 19.6199 0.403126C19.1133 -0.103451 18.2943 -0.103451 17.7877 0.403126L9.99988 8.19112L2.21228 0.403126C1.70548 -0.103451 0.886669 -0.103451 0.380103 0.403126C-0.126701 0.909703 -0.126701 1.72877 0.380103 2.23534L8.1677 10.0233L0.380103 17.8113C-0.126701 18.3179 -0.126701 19.137 0.380103 19.6436C0.632555 19.8963 0.964493 20.0232 1.29619 20.0232C1.62789 20.0232 1.95959 19.8963 2.21228 19.6436L9.99988 11.8556L17.7877 19.6436C18.0404 19.8963 18.3721 20.0232 18.7038 20.0232C19.0355 20.0232 19.3672 19.8963 19.6199 19.6436C20.1267 19.137 20.1267 18.3179 19.6199 17.8113L11.8323 10.0233Z"
-                        fill="white" />
-                </svg>
-
-            </div>
             <nav>
                 <ul class="menu_list">
                     <li class="menu_link"><a href="#">Обо мне</a></li>
@@ -119,17 +111,18 @@
                     </svg>
                 </a>
             </div>
-
         </div>
+
         <div class="menu_overlay"></div>
+
     </div>
 
     <section class="promo">
 
         <div class="hamburger">
-            <span></span>
-            <span></span>
-            <span></span>
+            <span class="hamburger_item"></span>
+            <span class="hamburger_item"></span>
+            <span class="hamburger_item"></span>
         </div>
 
         <div class="container">
@@ -152,14 +145,11 @@
                 <img src="img/slider/main_ph_7-transformed.png" alt="Slide 7">
             </div>
             <div class="promo_slider_lines">
-                <img id="lines" src="img/slider/lines/1.png" alt="Line 1">
-                <img id="lines" src="img/slider/lines/2.png" alt="Line 2">
-                <img id="lines" src="img/slider/lines/3.png" alt="Line 3">
-                <img id="lines" src="img/slider/lines/4.png" alt="Line 4">
-                <img id="lines" src="img/slider/lines/5.png" alt="Line 5">
-                <img id="lines" src="img/slider/lines/6.png" alt="Line 6">
-                <img id="lines" src="img/slider/lines/7.png" alt="Line 7">
-                <img id="lines" src="img/slider/lines/8.png" alt="Line 8">
+                <img src="img/slider/lines/1.png" alt="Line 1">
+                <img id="lines_2" src="img/slider/lines/2.png" alt="Line 2">
+                <!-- <img id="lines_3" src="img/slider/lines/3.png" alt="Line 3"> -->
+                <!-- <img id="lines_2" src="img/slider/lines/4.png" alt="Line 4">
+                <img src="img/slider/lines/5.png" alt="Line 5"> -->
             </div>
         </div>
 
@@ -171,7 +161,7 @@
 
     </section>
 
-    <section class="about">
+    <!-- <section class="about">
         <div class="container">
             <div class="about_wrapper">
                 <div class="about_img">
@@ -486,17 +476,83 @@
                     <img src="img/works/bread.jpg" alt="uber">
                 </a>
                 <a href="#" class="portfolio_item">
-                    <img src="img/works/plans.jpg" alt="uber">
-                </a>
-                <a href="#" class="portfolio_item">
                     <img src="img/works/pulse.jpg" alt="uber">
                 </a>
-                <a id="portfolio_about" href="#" class="portfolio_item">
-                    <img src="img/works/uber.jpg" alt="uber">
+                <a href="#" class="portfolio_item vertical">
+                    <img src="img/works/plans.jpg" alt="uber">
                 </a>
+                <div class="portfolio_item about_port">
+                    <h3 class="title_fz36">Данный сайт</h3>
+                    <p>Этот сайт, не смотря на его название, тоже часть моих работ</p>
+                </div>
             </div>
         </div>
     </section>
+
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts_wrapper">
+                <div class="contacts_img">
+                    <img src="img/main_photo_1.jpg" alt="img">
+                </div>
+                <div class="contacts_description">
+                    <h2 class="title title_fz18 contacts_title">Контакты</h2>
+                    <div class="title title_fz36 contacts_subtitle">Способы связи со мной</div>
+                    <div class="divider"></div>
+                    <div class="title title_fz18 contacts_text">Вы можете связаться со мной любым из указанных способов:
+                    </div>
+                    <div class="contacts_social">
+                        <a href="" class="contacts_link">
+                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15 30C23.2863 30 30 23.2863 30 15C30 6.71375 23.2863 0 15 0C6.71375 0 0 6.71375 0 15C0 23.2863 6.71375 30 15 30ZM6.86375 14.675L21.3263 9.09875C21.9975 8.85625 22.5837 9.2625 22.3662 10.2775L22.3675 10.2762L19.905 21.8775C19.7225 22.7 19.2338 22.9 18.55 22.5125L14.8 19.7487L12.9912 21.4913C12.7912 21.6913 12.6225 21.86 12.235 21.86L12.5013 18.0438L19.4512 11.765C19.7537 11.4987 19.3837 11.3488 18.985 11.6138L10.3963 17.0212L6.69375 15.8662C5.89 15.6112 5.8725 15.0625 6.86375 14.675V14.675Z"
+                                    fill="black" />
+                            </svg>
+                        </a>
+                        <a href="" class="contacts_link">
+                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15 0C6.71625 0 0 6.71625 0 15C0 23.2837 6.71625 30 15 30C23.2837 30 30 23.2837 30 15C30 6.71625 23.2837 0 15 0ZM9.37 6.75375C10.4225 6.75375 11.1238 7.455 11.1238 8.39C11.1238 9.325 10.4225 10.0262 9.25375 10.0262C8.20125 10.0275 7.5 9.325 7.5 8.39C7.5 7.455 8.20125 6.75375 9.37 6.75375ZM11.25 21.25L7.5 21.25L7.5 11.25H11.25L11.25 21.25ZM23.75 21.25H20.22V15.785C20.22 14.2738 19.2788 13.925 18.9263 13.925C18.5738 13.925 17.3962 14.1575 17.3962 15.785C17.3962 16.0175 17.3962 21.25 17.3962 21.25H13.75L13.75 11.25L17.3975 11.25V12.645C17.8675 11.8313 18.8087 11.25 20.5737 11.25C22.3387 11.25 23.75 12.645 23.75 15.785V21.25Z"
+                                    fill="black" />
+                            </svg>
+                        </a>
+                        <a href="" class="contacts_link">
+                            <svg width="30" height="30" viewBox="0 0 30 30" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M15 0C6.7125 0 0 6.88685 0 15.3806C0 22.1775 4.2975 27.9413 10.2562 29.9735C11.0062 30.1182 11.2812 29.6422 11.2812 29.2339C11.2812 28.8687 11.2687 27.9009 11.2625 26.6187C7.09 27.5461 6.21 24.5553 6.21 24.5553C5.5275 22.7801 4.54125 22.3053 4.54125 22.3053C3.1825 21.3519 4.64625 21.3714 4.64625 21.3714C6.1525 21.4784 6.94375 22.9562 6.94375 22.9562C8.28125 25.3079 10.455 24.6283 11.3125 24.2357C11.4475 23.2405 11.8338 22.5636 12.2625 22.1788C8.93125 21.794 5.43 20.4714 5.43 14.5785C5.43 12.8998 6.01125 11.5277 6.97375 10.4516C6.805 10.0629 6.29875 8.499 7.105 6.38077C7.105 6.38077 8.36125 5.96861 11.23 7.95771C12.43 7.61597 13.705 7.44641 14.98 7.43858C16.255 7.44641 17.53 7.61597 18.73 7.95771C21.58 5.96861 22.8362 6.38077 22.8362 6.38077C23.6425 8.499 23.1362 10.0629 22.9862 10.4516C23.9425 11.5277 24.5237 12.8998 24.5237 14.5785C24.5237 20.4871 21.0175 21.7875 17.68 22.1658C18.205 22.6275 18.6925 23.5705 18.6925 25.0118C18.6925 27.07 18.6737 28.7239 18.6737 29.2235C18.6737 29.6265 18.9362 30.1078 19.705 29.9539C25.7062 27.9348 30 22.1671 30 15.3806C30 6.88685 23.2837 0 15 0Z"
+                                    fill="black" />
+                            </svg>
+                        </a>
+                        <div class="title title_fz18 contacts_text">Или оставить свои контактные данные:</div>
+                        <form action="#" class="contacts_form">
+                            <div class="contacts_form-input">
+                                <input required name="user_name" id="user_name" type="text">
+                                <label for="user_name">Ваше имя:</label>
+                            </div>
+                            <div class="contacts_form-input">
+                                <input required name="user_email" id="user_email" type="email">
+                                <label for="user_email">Ваше почта:</label>
+                            </div>
+                            <div class="contacts_form-text">
+                                <textarea id="user_text" name="user_text"></textarea>
+                                <label for="user_text">Текст вашего сообщения:</label>
+                            </div>
+                            <div class="contacts_form-triggers">
+                                <button class="contacts_btn btn">Отправить сообщение</button>
+                                <div class="policy">
+                                    <input required type="checkbox">
+                                    <span>Я согласен(а) с <a href="/privacy.html">политикой конфиденциальности</a></span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
 
     <script src="js/script.js"></script>
 </body>
